# apertium-yua

./: Makefile  Makefile.am  README  README.md  apertium-yua.pc.in  apertium-yua.yua.lexc  apertium-yua.yua.rlx  apertium-yua.yua.spellrelax  apertium-yua.yua.twol  configure.ac  generate_stem_entries.py  modes.xml  yua.lexc  yua.twol
corpus/: ch'och'lin-yeetel-zinic.txt  hun-tuul-xnoc-och-hach-tak-u-hantik-put.txt  mam-cuuceba.txt  simple_sentences.txt  simple_sentences.txt.translated  tsikbal1.txt  tsikbal2.txt  tsikbal3.txt  tsikbal4.txt  tsikbal5.txt  tsikbal6.txt  tsikbal_pg94_ko'ox-tsikbal-maya-taan.txt  tsáab_kàan.txt  xkuruch.txt
dev/: check-multichars.sh
famli/: 2phones.fst  README.md  all_yua.hfst  nounstoy.att  nounstoy.fst  nounstoy.lexc  orth-toy.att  orth-toy.fst  orth-toy.lexc  phones2contemporary.att  phones2contemporary.fst  refs.bib  scratch.txt  yua-famli.att  yua-famli.fst  yua-famli.hfst  yua-famli.lexc  yua-for-graph.lexc  yua_inv.fst  yua_twol.hfst
speller/: index.xml
test/: tests.json
texts/: .grammar.tsv.swp  grammar.tsv
